--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -56,178 +56,18 @@
             <div class="nav-section-title">Management</div>
             <ul class="nav-list">
                 <!-- Employees Module -->
-                <li class="nav-item nav-dropdown" id="employees-dropdown">
-                    <a class="nav-link nav-dropdown-toggle {% if 'employees' in request.resolver_match.namespace %}active{% endif %}" 
-                       href="#" onclick="toggleDropdown('employees-dropdown')">
-                        <i class="nav-icon fas fa-user-tie"></i>
-                        <span class="nav-text">Employees</span>
-                    </a>
-                    <ul class="nav-submenu">
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.resolver_match.url_name == 'list' and 'employees' in request.resolver_match.namespace %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/employees/">
-                                <i class="nav-icon fas fa-users-cog"></i>
-                                <span class="nav-text">All Employees</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.resolver_match.url_name == 'create' and 'employees' in request.resolver_match.namespace %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/employees/create/">
-                                <i class="nav-icon fas fa-user-plus"></i>
-                                <span class="nav-text">Add Employee</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-divider">
-                            <span class="nav-divider-text">Management</span>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/employees/attendance/">
-                                <i class="nav-icon fas fa-clock"></i>
-                                <span class="nav-text">Attendance</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/employees/payroll/">
-                                <i class="nav-icon fas fa-money-bill-wave"></i>
-                                <span class="nav-text">Payroll</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/employees/performance/">
-                                <i class="nav-icon fas fa-chart-line"></i>
-                                <span class="nav-text">Performance</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/employees/training/">
-                                <i class="nav-icon fas fa-graduation-cap"></i>
-                                <span class="nav-text">Training</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+                {% include "includes/sidebar/modules/employees.html" %}
 
                 <!-- Inventory Module -->
-                <li class="nav-item nav-dropdown" id="inventory-dropdown">
-                    <a class="nav-link nav-dropdown-toggle {% if 'inventory' in request.resolver_match.namespace %}active{% endif %}" 
-                       href="#" onclick="toggleDropdown('inventory-dropdown')">
-                        <i class="nav-icon fas fa-boxes"></i>
-                        <span class="nav-text">Inventory</span>
-                    </a>
-                    <ul class="nav-submenu">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/inventory/">
-                                <i class="nav-icon fas fa-box"></i>
-                                <span class="nav-text">Products</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/inventory/categories/">
-                                <i class="nav-icon fas fa-tags"></i>
-                                <span class="nav-text">Categories</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/inventory/stock/">
-                                <i class="nav-icon fas fa-warehouse"></i>
-                                <span class="nav-text">Stock Management</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/inventory/orders/">
-                                <i class="nav-icon fas fa-shopping-cart"></i>
-                                <span class="nav-text">Purchase Orders</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+                 {% include "includes/sidebar/modules/inventory.html" %}
+                
+              
 
                 <!-- Suppliers Module -->
-                <li class="nav-item nav-dropdown" id="suppliers-dropdown">
-                    <a class="nav-link nav-dropdown-toggle {% if 'suppliers' in request.resolver_match.namespace %}active{% endif %}" 
-                       href="#" onclick="toggleDropdown('suppliers-dropdown')">
-                        <i class="nav-icon fas fa-truck"></i>
-                        <span class="nav-text">Suppliers</span>
-                    </a>
-                    <ul class="nav-submenu">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/suppliers/">
-                                <i class="nav-icon fas fa-list"></i>
-                                <span class="nav-text">All Suppliers</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/suppliers/create/">
-                                <i class="nav-icon fas fa-plus-circle"></i>
-                                <span class="nav-text">Add Supplier</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/suppliers/orders/">
-                                <i class="nav-icon fas fa-file-invoice"></i>
-                                <span class="nav-text">Supplier Orders</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+                {% include "includes/sidebar/modules/suppliers.html" %}
 
                 <!-- Reports Module -->
-                <li class="nav-item nav-dropdown" id="reports-dropdown">
-                    <a class="nav-link nav-dropdown-toggle {% if 'reports' in request.resolver_match.namespace %}active{% endif %}" 
-                       href="#" onclick="toggleDropdown('reports-dropdown')">
-                        <i class="nav-icon fas fa-chart-bar"></i>
-                        <span class="nav-text">Reports</span>
-                    </a>
-                    <ul class="nav-submenu">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/reports/">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
-                                <span class="nav-text">Dashboard</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/reports/financial/">
-                                <i class="nav-icon fas fa-dollar-sign"></i>
-                                <span class="nav-text">Financial Reports</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/reports/services/">
-                                <i class="nav-icon fas fa-car-wash"></i>
-                                <span class="nav-text">Service Reports</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/reports/customers/">
-                                <i class="nav-icon fas fa-users"></i>
-                                <span class="nav-text">Customer Reports</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/business/{{ request.tenant.slug }}/reports/inventory/">
-                                <i class="nav-icon fas fa-boxes"></i>
-                                <span class="nav-text">Inventory Reports</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+                {% include "includes/sidebar/modules/reports.html" %}
         {% endif %}
 
         <!-- Personal Section -->
