Updated Tenant Flow

--- a/templates/includes/topbar/quick_actions.html
+++ b/templates/includes/topbar/quick_actions.html
@@ -40,7 +40,7 @@
             
             <!-- New Customer -->
             <a class="dropdown-item action-item" 
-               href="/business/{{ request.tenant.slug }}/customers/create/">
+               href="/business/{{ request.tenant.slug }}/services/quick/customer-register/">
                 <div class="action-icon bg-success">
                     <i class="fas fa-user-plus"></i>
                 </div>
