--- a/templates/services/order_list.html
+++ b/templates/services/order_list.html
@@ -305,7 +305,7 @@
                                         
                                         {% if order.payment_status != 'paid' %}
                                         <li><hr class="dropdown-divider"></li>
-                                        <li><a class="dropdown-item text-warning" href="/business/{{ request.tenant.slug }}/services/orders/{{ order.id }}/payment/">
+                                        <li><a class="dropdown-item text-warning" href="/business/{{ request.tenant.slug }}/payments/create/{{ order.id }}/">
                                             <i class="fas fa-credit-card"></i> Process Payment
                                         </a></li>
                                         {% endif %}
